--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ h6 {
 
 .menu {
   display: block;
-  padding-top: 56px;
+  margin-top: 56px;
   -webkit-transition: 1s;
   transition: 1s;
   -webkit-transform: translateX(180px);
@@ -349,7 +349,6 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: none;
 }
 
 .menu-content__title {
@@ -388,8 +387,9 @@ h6 {
 .line_active {
   -webkit-transition: 1s;
   transition: 1s;
-  -webkit-transform: translateX(0%);
-          transform: translateX(0%);
+  -webkit-transform: translateX(0%) !important;
+          transform: translateX(0%) !important;
+  background-color: transparent !important;
 }
 
 .line_active .menu-text {
@@ -587,9 +587,51 @@ h6 {
   }
 }
 
+@media (max-width: 1199px) {
+  .menu {
+    -webkit-transform: translateX(calc(50vw - 243%));
+            transform: translateX(calc(50vw - 243%));
+  }
+}
+
+@media (max-width: 991.98px) {
+  .menu {
+    -webkit-transform: translateX(calc(50vw - 175%));
+            transform: translateX(calc(50vw - 175%));
+  }
+}
+
+@media (max-width: 767.98px) {
+  .menu {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+  }
+}
+
 @media (max-width: 576px) {
   .menu-button {
     display: block;
+  }
+  .menu__nav {
+    padding: 20px 0px;
+    min-width: 320px;
+    height: 100%;
+  }
+  .menu {
+    -webkit-transform: translateX(340%);
+            transform: translateX(340%);
+    background-color: #fff;
+  }
+  .menu-content__title {
+    white-space: pre-wrap;
+  }
+  .line_active {
+    -webkit-transform: translateX(-100%) !important;
+            transform: translateX(-100%) !important;
+    margin-top: 20px;
+  }
+  .menu-mobile {
+    max-width: 320px;
   }
 }
 
@@ -650,6 +692,8 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .button {
@@ -685,6 +729,24 @@ h6 {
 
 .search-location img {
   padding-right: 15px;
+}
+
+@media (max-width: 767.98px) {
+  .menu-text {
+    display: none;
+  }
+}
+
+@media (max-width: 479.98px) {
+  .logo_white {
+    padding-right: 10px;
+  }
+  .logo_white img {
+    margin: 0 0 0 auto;
+  }
+  .search-location {
+    margin: 20px 0px 0px 0px;
+  }
 }
 
 @font-face {
@@ -739,7 +801,7 @@ h6 {
 .model-number__link {
   display: block;
   font-family: "Roboto Condensed";
-  font-size: 20px;
+  font-size: calc(16px + 4 * ((100vw - 320px) / 1440));
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 25px;
@@ -775,12 +837,12 @@ h6 {
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: absolute;
-  width: 67%;
+  width: 68.5%;
   height: 90%;
   padding: 50px 80px;
   max-width: 1280px;
   max-height: 600px;
-  z-index: 5;
+  z-index: -1;
   opacity: 0;
   -webkit-transition: 1s;
   transition: 1s;
@@ -799,7 +861,7 @@ h6 {
 }
 
 .car__bg_4 {
-  background: url("../img/preview-4.jpg") center/cover no-repeat;
+  background: url("../img/preview-2.jpg") center/cover no-repeat;
 }
 
 .car__title {
@@ -810,12 +872,12 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-size: calc(12px + 13 * ((100vw - 320px) / 1440));
 }
 
 .car__description span {
   color: #ffffff;
   font-family: "Avenir Next";
-  font-size: 25px;
   font-weight: 400;
   letter-spacing: 1px;
   line-height: 55px;
@@ -826,7 +888,6 @@ h6 {
 .car__description strong {
   color: #ffffff;
   font-family: "Avenir Next bold";
-  font-size: 25px;
   font-weight: 700;
   letter-spacing: 1px;
   line-height: 55px;
@@ -841,4 +902,155 @@ h6 {
   opacity: 1;
   -webkit-transition: 1s;
   transition: 1s;
+  z-index: 10;
+}
+
+@media (max-width: 767.98px) {
+  .model-number__car {
+    left: 0;
+    width: 100%;
+  }
+  .car__description span {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 479.98px) {
+  .model-number__title {
+    margin: 0;
+  }
+  .model-number__link {
+    margin: 0;
+  }
+  .car__title {
+    text-align: center;
+  }
+  .model-number__car {
+    padding: 20px;
+  }
+  .car__description {
+    width: 100%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .car__button {
+    margin: auto;
+  }
+}
+
+.accessories {
+  padding: 0;
+  min-height: 0;
+}
+
+.accessories_container {
+  padding-top: 40px;
+  margin-bottom: -104px;
+  z-index: 2;
+  width: 100%;
+}
+
+.accessories__menu-wrapper {
+  margin-top: 0;
+}
+
+.accessories__menu {
+  margin-top: 40px;
+  background-color: #fff;
+}
+
+.accessories__menu-text {
+  padding: 20px 20px 20px 0px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.accessories__body {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.accessories__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.accessories__column {
+  cursor: pointer;
+  position: relative;
+}
+
+.accessories__column img {
+  width: 100%;
+}
+
+.accessories__description {
+  position: absolute;
+  color: #ffffff;
+  font-family: "Rubik One";
+  font-size: calc(18px + 7 * ((100vw - 320px) / 1440));
+  font-weight: 400;
+  letter-spacing: 1px;
+  line-height: 30px;
+  bottom: 10%;
+  left: 10%;
+}
+
+@media (max-width: 1170px) {
+  .accessories__menu {
+    -webkit-transform: translateX(calc(50vw - 115%));
+            transform: translateX(calc(50vw - 115%));
+  }
+}
+
+@media (max-width: 991.98px) {
+  .accessories__menu {
+    -webkit-transform: translateX(calc(50vw - 83%));
+            transform: translateX(calc(50vw - 83%));
+  }
+  .accessories__img {
+    padding-right: 10px;
+  }
+  .accessories__img img {
+    margin: 0px 0px 0px auto;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .accessories__menu {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+  }
+  .accessories__column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    margin: auto;
+  }
+  .accessories__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 576.98px) {
+  .accessories__menu {
+    -webkit-transform: translateX(340%);
+            transform: translateX(340%);
+  }
+  .accessories__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .accessories__column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
 }
