--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -40,6 +40,7 @@
 .header-info 
     display: flex
     align-items: center
+    flex-wrap: wrap
 .button
     color: #ffffff
     font-family: "Roboto Condensed"
@@ -51,7 +52,7 @@
     border: 5px solid #ffffff 
 .header__button
     padding: 15px 35px
-    margin-right: 50px 
+    margin-right: 50px
 .search-location
     color: #ffffff
     font-family: "Roboto Condensed"
@@ -63,4 +64,18 @@
     align-items: center
     img
         padding-right: 15px
+@media (max-width: 1170px)
+    .menu
+        
+@media (max-width: 767.98px)
+    .menu-text
+        display: none
+@media (max-width: 479.98px)
+    .logo_white
+        padding-right: 10px
+        img
+
+            margin: 0 0 0 auto
+    .search-location
+        margin: 20px 0px 0px 0px
     
