--- a/sass/_model-number.sass
+++ b/sass/_model-number.sass
@@ -21,7 +21,7 @@
 .model-number__link 
     display: block
     font-family: "Roboto Condensed"
-    font-size: 20px
+    @include adaptiv-font(20,16)
     font-weight: 700
     letter-spacing: 0.8px
     line-height: 25px
@@ -44,12 +44,12 @@
     align-items: flex-start
     justify-content: space-between
     position: absolute
-    width: 67%
+    width: 68.5%
     height: 90%
     padding: 50px 80px
     max-width: 1280px
     max-height: 600px
-    z-index: 5 
+    z-index: -1 
     opacity: 0
     transition: 1s
 .car__bg_1
@@ -59,16 +59,16 @@
 .car__bg_3
     background: url('../img/preview-3.jpg') center / cover no-repeat
 .car__bg_4
-    background: url('../img/preview-4.jpg') center / cover no-repeat
+    background: url('../img/preview-2.jpg') center / cover no-repeat
 .car__title
     display: block 
 .car__description
     display: flex 
+    @include adaptiv-font(25,12)
     span
 
         color: #ffffff
         font-family: "Avenir Next"
-        font-size: 25px
         font-weight: 400
         letter-spacing: 1px
         line-height: 55px
@@ -77,7 +77,6 @@
     strong
         color: #ffffff
         font-family: "Avenir Next bold"
-        font-size: 25px
         font-weight: 700
         letter-spacing: 1px
         line-height: 55px
@@ -87,4 +86,27 @@
     margin: 20px 0px 0px 0px
 .car__active
     opacity: 1
-    transition: 1s 
+    transition: 1s
+    z-index: 10 
+@media (max-width: 767.98px)
+    .model-number__car
+        left: 0
+        width: 100%
+    .car__description
+        span
+            margin-right: 30px
+@media (max-width: 479.98px)
+    .model-number__title
+        margin: 0
+    .model-number__link
+        margin: 0
+    .car__title
+        text-align: center   
+    .model-number__car
+        padding: 20px
+    .car__description
+        width: 100%
+        justify-content: space-around
+    .car__button
+        margin: auto
+        
