--- a/sass/_accessories.sass
+++ b/sass/_accessories.sass
@@ -3,7 +3,7 @@
     min-height: 0
 .accessories_container
     margin-bottom: -104px
-    z-index: 2
+    z-index: 5
     padding: 40px 0px 0px
 .accessories__menu-wrapper
     margin-top: 0 
@@ -23,6 +23,12 @@
 .accessories__column
     cursor: pointer
     position: relative
+    z-index: 1
+    transition: 0.5s
+    &:hover
+        transform: scale(1.05)
+        transition: 0.5s
+        z-index: 3 !important
     img
         width: 100% 
 .accessories__description
