--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -17,6 +17,11 @@ body
     min-height: 100vh
     padding-top: 56px
     padding-bottom: 80px
+@media (max-width: 576.98px)
+    .fullscreen
+        padding-bottom: 50px
+        
+    
 .wrapper
     min-height: 100vh
     display: flex
