--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,12 +1,11 @@
 @import 'interface'
 @import 'null'
+@import 'fonts'
 @import 'burger-menu'
 @import 'header'
-@import 'fonts'
 @import 'model-number'
 @import 'accessories'
-
-
-
+@import 'newitems'
+@import 'gallery'
 @import 'footer'
 
