--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -23,3 +23,12 @@
     font-weight: 400;
     font-style: normal;
   };
+  @font-face {
+    font-family: 'Gotham Pro';
+    src: url('../fonts/GothamPro-Bold.eot');
+    src: url('../fonts/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/GothamPro-Bold.woff') format('woff'),
+    url('../fonts/GothamPro-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    }
